# nifi-rust-client

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  NIFI_API_CHANGES.md  README.md  deny.toml  rust-analyzer.toml  rustfmt.toml
crates/nifi-openapi-gen/: CHANGELOG.md  Cargo.toml  README.md
crates/nifi-openapi-gen/scripts/: fetch-nifi-spec.sh
crates/nifi-openapi-gen/specs/2.10.0/: fn_names.txt  nifi-api.json
crates/nifi-openapi-gen/specs/2.6.0/: fn_names.txt  nifi-api.json
crates/nifi-openapi-gen/specs/2.7.2/: nifi-api.json
crates/nifi-openapi-gen/specs/2.8.0/: fn_names.txt  nifi-api.json
crates/nifi-openapi-gen/specs/2.9.0/: fn_names.txt  nifi-api.json
crates/nifi-openapi-gen/src/: build_api.rs  canonical.rs  content_type.rs  diff.rs  emit_api.rs  emit_dynamic.rs  emit_dynamic_conversions.rs  emit_dynamic_dispatch.rs  emit_dynamic_impls.rs  emit_dynamic_tests.rs  emit_dynamic_traits.rs  emit_dynamic_types.rs  emit_tests.rs  emit_types.rs  layout.rs  lib.rs  naming.rs  naming_overrides.rs  non_additive_detector.rs  non_additive_overrides.rs  parser.rs  parser_strict.rs  plan.rs  util.rs
crates/nifi-openapi-gen/src/diff/: endpoint.rs  index.rs  mod.rs  report.rs  types.rs
crates/nifi-openapi-gen/src/docs/: api_changes.rs  integration_coverage.rs  mod.rs  readme_examples.rs  resource_accessors.rs  versions_table.rs
crates/nifi-openapi-gen/src/emit/: api.rs  common.rs  method.rs  mod.rs  tests.rs  traits.rs  types.rs  types_shared.rs
crates/nifi-openapi-gen/src/emit/cli/: columns.rs  commands.rs  mod.rs  verb_map.rs
crates/nifi-openapi-gen/src/emit/dynamic/: api.rs  availability.rs  conversions.rs  dispatch.rs  entry.rs  impls.rs  index.rs  mod.rs  tests.rs  traits.rs  types.rs
crates/nifi-openapi-gen/src/emit/dynamic_v2/: api.rs  availability.rs  index.rs  mod.rs  types.rs
crates/nifi-openapi-gen/src/emit/integration/: common.rs  endpoint_availability.rs  enum_coverage.rs  field_presence.rs  mod.rs  overrides.rs  query_param_coverage.rs
crates/nifi-openapi-gen/src/repo/: cargo_features.rs  cleanup.rs  docker_compose.rs  fn_names.rs  lib_rs.rs  mod.rs
crates/nifi-openapi-gen/tests/: canonical_test.rs  emit_api_test.rs  emit_dynamic_dispatch_test.rs  emit_dynamic_impls_test.rs  emit_dynamic_traits_test.rs  emit_integration_test.rs  emit_method_dispatch_test.rs  emit_types_test.rs  fn_names_golden_test.rs  model_test.rs  naming_test.rs  non_additive_detector_test.rs  parser_header_params.rs  parser_strict_test.rs  parser_test.rs  plan_test.rs
crates/nifi-openapi-gen/tests/fixtures/: double_suffix_op.json  endpoints.json  entity_wrapper.json  inline_enum.json  multi_digit_suffix_op.json  multi_segment_path.json  query_params.json  ref_and_array.json  simple_dto.json  sub_paths.json  suffixed_op.json  unsuffixed_op.json
crates/nifi-rust-client/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/nifi-rust-client/examples/: basic_static.rs  bulk_start_stop.rs  credentials_and_retry.rs  custom_tls.rs  dynamic_autodetect.rs  streaming_download.rs
crates/nifi-rust-client/src/: builder.rs  bulk.rs  client.rs  compat.rs  credentials.rs  error.rs  lib.rs  pagination.rs  require.rs  retry.rs  streaming.rs  url.rs  wait.rs
crates/nifi-rust-client/src/config/: auth.rs  credentials.rs  mod.rs  retry.rs
crates/nifi-rust-client/src/dynamic/: client.rs  conversions.rs  mod.rs  strategy.rs  types.rs
crates/nifi-rust-client/src/dynamic/conversions/: mod.rs  v2_6_0.rs  v2_7_2.rs  v2_8_0.rs
crates/nifi-rust-client/src/dynamic/dispatch/: access.rs  authentication.rs  connections.rs  controller.rs  controller_services.rs  counters.rs  datatransfer.rs  flow.rs  flowfilequeues.rs  funnels.rs  inputports.rs  labels.rs  mod.rs  outputports.rs  parametercontexts.rs  parameterproviders.rs  policies.rs  processgroups.rs  processors.rs  provenance.rs  provenanceevents.rs  remoteprocessgroups.rs  reportingtasks.rs  resources.rs  sitetosite.rs  snippets.rs  systemdiagnostics.rs  tenants.rs  versions.rs
crates/nifi-rust-client/src/dynamic/impls/: mod.rs
crates/nifi-rust-client/src/dynamic_v2/: client.rs  mod.rs
crates/nifi-rust-client/src/v2_6_0/api/: flow.rs  (+27 more)
crates/nifi-rust-client/src/v2_7_2/: mod.rs
crates/nifi-rust-client/tests/: access.rs  auth_debug.rs  auth_provider.rs  auth_retry.rs  binary_response_test.rs  builder_tests.rs  bulk.rs  compat_flexible_string.rs  concurrent_auth_retry.rs  connections.rs  controller.rs  controller_services.rs  counters.rs  credentials.rs  datatransfer.rs  dynamic_canonical_smoke.rs  dynamic_cluster_discovery.rs  dynamic_dispatch.rs  dynamic_field_enum_helpers.rs  dynamic_header_params.rs  dynamic_streaming_test.rs  dynamic_tests.rs  dynamic_unsupported.rs  dynamic_v2_smoke.rs  error_handling.rs  export_process_group.rs  flow.rs  funnels.rs  header_params.rs  inputports.rs  labels.rs  multipart_upload_test.rs  outputports.rs  pagination.rs  parameter_providers.rs  parametercontexts.rs  policies.rs  processgroups.rs  processors.rs  provenance.rs  (+23 more)
crates/nifictl/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/nifictl/src/: body.rs  cli.rs  client_factory.rs  config.rs  confirm.rs  dispatch.rs  dry_run.rs  error.rs  jwt.rs  main.rs  output.rs  prompt.rs  table.rs  wait_wire.rs
crates/nifictl/src/porcelain/: config_cmd.rs  flow.rs  login.rs  mod.rs  ops.rs  status.rs  token_cache.rs
crates/nifictl/tests/: cli_integration.rs
tests/: Cargo.toml  build.rs  docker-compose.yml  run-matrix.sh  run.sh
tests/scripts/: authorizers.xml  bootstrap-policies.sh  generate-certs.sh  nifi-entrypoint.sh
tests/tests/: connect.rs  connections.rs  controller_services.rs  dynamic.rs  dynamic_endpoint_availability.rs  dynamic_enum_coverage.rs  dynamic_field_presence.rs  dynamic_generated.rs  dynamic_query_param_coverage.rs  flow.rs  flow_portability.rs  flow_status.rs  flowfilequeues.rs  funnels.rs  helpers.rs  inputports.rs  labels.rs  outputports.rs  parametercontexts.rs  processgroups.rs  provenance.rs  readonly.rs  reportingtasks.rs  tenants.rs  wait.rs  wait_dynamic.rs
(+346 files in other folders)
