[workspace]
members = ["crates/*", "tests"]
# The `tests` integration crate is intentionally omitted from default-members so
# a bare `cargo test` skips it. It targets the static `NifiClient` API, but
# nifictl pulls in `nifi-rust-client` with the `dynamic` feature, and a
# whole-workspace build unifies `dynamic` on — which removes the static
# accessors the integration tests need. Run it explicitly via `./tests/run.sh`
# (it needs a live NiFi anyway). See AGENTS.md → "Build & Test".
default-members = [
    "crates/nifi-openapi-gen",
    "crates/nifi-rust-client",
    "crates/nifictl",
]
resolver = "3"

[workspace.package]
# Note: each crate owns its own `version` literal so nifi-openapi-gen and
# nifi-rust-client can be released independently. Do NOT add a `version` key
# here — see AGENTS.md → "Releases".
authors = ["Malte Sander <contact@maltesander.com>"]
license = "Apache-2.0"
edition = "2024"
rust-version = "1.88"
repository = "https://github.com/maltesander/nifi-rust-client"
homepage = "https://github.com/maltesander/nifi-rust-client"
documentation = "https://docs.rs/nifi-rust-client"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
comfy-table = "7"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
nifi-openapi-gen = { path = "crates/nifi-openapi-gen" }
nifi-rust-client = { path = "crates/nifi-rust-client", default-features = false }
prettyplease = "0.2"
reqwest = { version = "0.13", default-features = false, features = ["form", "json", "multipart", "query", "rustls", "stream"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_norway = "0.9"
snafu = "0.9"
syn = { version = "2", features = ["full"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
toml = "1"
toml_edit = "0.25"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
wiremock = "0.6"

[workspace.lints.clippy]
unwrap_in_result = "deny"
unwrap_used = "deny"
panic = "deny"
