[package]
name = "nifi-integration-tests"
version.workspace = true
description = "Integration tests for nifi-rust-client against a real NiFi instance"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
publish = false

[build-dependencies]
nifi-openapi-gen = { path = "../crates/nifi-openapi-gen" }

[dev-dependencies]
nifi-rust-client = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros", "time"] }

[lints]
workspace = true

[features]
default = ["nifi-2-8-0"]
dynamic = ["nifi-rust-client/dynamic"]
nifi-2-6-0 = ["nifi-rust-client/nifi-2-6-0"]
nifi-2-7-2 = ["nifi-rust-client/nifi-2-7-2"]
nifi-2-8-0 = ["nifi-rust-client/nifi-2-8-0"]
