[package]
name = "nifi-openapi-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[dependencies]
prettyplease.workspace = true
semver.workspace = true
serde_json.workspace = true
syn.workspace = true
toml_edit.workspace = true
