[package]
name = "nifi-openapi-gen"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
publish = false

[[bin]]
name = "openapi-diff"
path = "src/bin/openapi_diff.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
prettyplease.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml_edit.workspace = true
