[package]
name = "nifi-openapi-gen"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nifi-openapi-gen"
description = "OpenAPI code generator for nifi-rust-client — not intended for general use"
exclude = ["scripts/", "tests/"]
default-run = "generate"

[[bin]]
name = "openapi-diff"
path = "src/bin/openapi_diff.rs"
required-features = ["cli"]

[features]
cli = ["dep:clap"]

[dependencies]
clap = { workspace = true, optional = true }
prettyplease.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
syn.workspace = true
toml_edit.workspace = true

[dev-dependencies]
tempfile = "3"
