[package]
name = "nifi-rust-client"
version.workspace = true
description = "Apache NiFi REST API client library"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true

[package.metadata.docs.rs]
features = ["dynamic"]

[dependencies]
async-trait.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { version = "1", features = ["sync", "time"] }
tracing.workspace = true
url.workspace = true

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
wiremock.workspace = true

[build-dependencies]
nifi-openapi-gen = { path = "../nifi-openapi-gen", version = "0.4.2" }

[lints]
workspace = true

[features]
default = ["nifi-2-8-0"]
dynamic = ["nifi-2-6-0", "nifi-2-7-2", "nifi-2-8-0"]
nifi-2-6-0 = []
nifi-2-7-2 = []
nifi-2-8-0 = []
