[package]
name = "nifictl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Apache NiFi 2.x"

[dependencies]
nifi-rust-client = { version = "0.10", features = ["dynamic"] }
clap = { workspace = true }
clap_complete.workspace = true
comfy-table.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile = "3"

[build-dependencies]
nifi-openapi-gen = { path = "../nifi-openapi-gen", version = "0.10.0" }

[lints]
workspace = true
