[package]
name = "nifictl"
version = "0.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Apache NiFi 2.x"

[dependencies]
base64.workspace = true
clap = { workspace = true }
clap_complete.workspace = true
comfy-table.workspace = true
humantime = "2"
nifi-rust-client = { path = "../nifi-rust-client", version = "0.10.1", features = ["dynamic"] }
rpassword = "7"
serde = { workspace = true }
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
wiremock = { workspace = true }

[build-dependencies]
nifi-openapi-gen = { path = "../nifi-openapi-gen", version = "0.10.1" }

[lints]
workspace = true
