[package]
name = "nifictl"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tool for Apache NiFi 2.x"

[dependencies]
base64.workspace = true
clap = { workspace = true }
clap_complete.workspace = true
comfy-table.workspace = true
humantime.workspace = true
nifi-rust-client = { path = "../nifi-rust-client", version = "0.14.0", features = ["dynamic"] }
rpassword.workspace = true
serde = { workspace = true }
serde_json.workspace = true
serde_norway.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tempfile.workspace = true
wiremock = { workspace = true }

[build-dependencies]
nifi-openapi-gen = { path = "../nifi-openapi-gen", version = "0.14.0" }

[lints]
workspace = true
